unix/lang/tests/error/switch_goto_error.yab
#expect#---Error in switch_goto_error.yab, line 12:
#expect#---Error: GOTO between switch-statements
#expect#     case 0: label other
#expect#                   ^~~~~
#expect#---Error: Program stopped due to an error

switch 0
  case 0: goto other
end switch

switch 0
  case 0: label other
end switch

